/* =========================================================
   校园综合跑腿与代取服务管理系统
   Oracle 18c 建表语句
   ========================================================= */

/* 1. 用户表 */
CREATE TABLE users (
    user_id NUMBER GENERATED BY DEFAULT ON NULL AS IDENTITY,
    username VARCHAR2(50) NOT NULL,
    phone VARCHAR2(20),
    password_hash VARCHAR2(128) NOT NULL,
    user_role VARCHAR2(20) NOT NULL,
    account_status VARCHAR2(20) DEFAULT 'NORMAL' NOT NULL,

    CONSTRAINT pk_users PRIMARY KEY (user_id),
    CONSTRAINT uk_users_username UNIQUE (username),
    CONSTRAINT uk_users_phone UNIQUE (phone),
    CONSTRAINT ck_users_role CHECK (
        user_role IN ('USER', 'RUNNER', 'NODE_ADMIN', 'ADMIN')
    ),
    CONSTRAINT ck_users_status CHECK (
        account_status IN ('NORMAL', 'DISABLED')
    )
);

/* 2. 用户地址表 */
CREATE TABLE user_addresses (
    address_no NUMBER GENERATED BY DEFAULT ON NULL AS IDENTITY,
    user_id NUMBER NOT NULL,
    contact_name VARCHAR2(50) NOT NULL,
    contact_phone VARCHAR2(20) NOT NULL,
    campus VARCHAR2(50) NOT NULL,
    building_room VARCHAR2(100) NOT NULL,
    is_default CHAR(1) DEFAULT 'N' NOT NULL,

    CONSTRAINT pk_user_addresses PRIMARY KEY (address_no),
    CONSTRAINT fk_user_addresses_user FOREIGN KEY (user_id)
        REFERENCES users(user_id),
    CONSTRAINT ck_user_addresses_default CHECK (is_default IN ('Y', 'N'))
);

/* 3. 跑腿员表 */
CREATE TABLE runners (
    runner_id NUMBER GENERATED BY DEFAULT ON NULL AS IDENTITY,
    user_id NUMBER NOT NULL,
    real_name VARCHAR2(50) NOT NULL,
    identity_info VARCHAR2(100),
    audit_status VARCHAR2(20) DEFAULT 'PENDING' NOT NULL,
    work_status VARCHAR2(20) DEFAULT 'OFFLINE' NOT NULL,
    credit_score NUMBER DEFAULT 100 NOT NULL,

    CONSTRAINT pk_runners PRIMARY KEY (runner_id),
    CONSTRAINT uk_runners_user UNIQUE (user_id),
    CONSTRAINT fk_runners_user FOREIGN KEY (user_id)
        REFERENCES users(user_id),
    CONSTRAINT ck_runners_audit_status CHECK (
        audit_status IN ('PENDING', 'APPROVED', 'REJECTED')
    ),
    CONSTRAINT ck_runners_work_status CHECK (
        work_status IN ('FREE', 'BUSY', 'OFFLINE')
    ),
    CONSTRAINT ck_runners_credit CHECK (credit_score >= 0)
);

/* 4. 服务节点表 */
CREATE TABLE nodes (
    node_id NUMBER GENERATED BY DEFAULT ON NULL AS IDENTITY,
    node_type VARCHAR2(30) NOT NULL,
    node_name VARCHAR2(80) NOT NULL,
    location VARCHAR2(200) NOT NULL,
    open_time VARCHAR2(100),
    node_status VARCHAR2(20) DEFAULT 'NORMAL' NOT NULL,

    CONSTRAINT pk_nodes PRIMARY KEY (node_id),
    CONSTRAINT ck_nodes_type CHECK (
        node_type IN ('GATE', 'STATION', 'DISTRIBUTION', 'SHOP')
    ),
    CONSTRAINT ck_nodes_status CHECK (
        node_status IN ('NORMAL', 'CLOSED')
    )
);

/* 5. 服务类型表 */
CREATE TABLE service_types (
    service_type_id NUMBER GENERATED BY DEFAULT ON NULL AS IDENTITY,
    service_name VARCHAR2(50) NOT NULL,
    base_price NUMBER(10,2) NOT NULL,
    distance_rule VARCHAR2(200),
    urgent_rule VARCHAR2(200),
    type_status VARCHAR2(20) DEFAULT 'ENABLED' NOT NULL,

    CONSTRAINT pk_service_types PRIMARY KEY (service_type_id),
    CONSTRAINT uk_service_types_name UNIQUE (service_name),
    CONSTRAINT ck_service_types_price CHECK (base_price >= 0),
    CONSTRAINT ck_service_types_status CHECK (
        type_status IN ('ENABLED', 'DISABLED')
    )
);

/* 6. 任务主单表 */
CREATE TABLE tasks (
    task_id NUMBER GENERATED BY DEFAULT ON NULL AS IDENTITY,
    user_id NUMBER NOT NULL,
    service_type_id NUMBER NOT NULL,
    address_no NUMBER NOT NULL,
    support_node_id NUMBER,
    task_title VARCHAR2(100) NOT NULL,
    task_price NUMBER(10,2) NOT NULL,
    urgent_flag CHAR(1) DEFAULT 'N' NOT NULL,
    task_status VARCHAR2(30) DEFAULT 'CREATED' NOT NULL,
    created_at DATE DEFAULT SYSDATE NOT NULL,
    completed_at DATE,

    CONSTRAINT pk_tasks PRIMARY KEY (task_id),
    CONSTRAINT fk_tasks_user FOREIGN KEY (user_id)
        REFERENCES users(user_id),
    CONSTRAINT fk_tasks_service_type FOREIGN KEY (service_type_id)
        REFERENCES service_types(service_type_id),
    CONSTRAINT fk_tasks_address FOREIGN KEY (address_no)
        REFERENCES user_addresses(address_no),
    CONSTRAINT fk_tasks_node FOREIGN KEY (support_node_id)
        REFERENCES nodes(node_id),
    CONSTRAINT ck_tasks_price CHECK (task_price >= 0),
    CONSTRAINT ck_tasks_urgent CHECK (urgent_flag IN ('Y', 'N')),
    CONSTRAINT ck_tasks_status CHECK (
        task_status IN ('CREATED', 'PAID', 'ASSIGNED', 'FINISHED', 'CANCELED')
    )
);

/* 7. 外卖发货明细表 */
CREATE TABLE food_delivery_details (
    detail_no NUMBER GENERATED BY DEFAULT ON NULL AS IDENTITY,
    task_id NUMBER NOT NULL,
    merchant_name VARCHAR2(100) NOT NULL,
    platform_order_no VARCHAR2(80),
    pickup_note VARCHAR2(200),

    CONSTRAINT pk_food_delivery_details PRIMARY KEY (detail_no),
    CONSTRAINT uk_food_delivery_task UNIQUE (task_id),
    CONSTRAINT fk_food_delivery_task FOREIGN KEY (task_id)
        REFERENCES tasks(task_id)
);

/* 8. 快递代取明细表 */
CREATE TABLE express_pickup_details (
    detail_no NUMBER GENERATED BY DEFAULT ON NULL AS IDENTITY,
    task_id NUMBER NOT NULL,
    express_company VARCHAR2(80) NOT NULL,
    waybill_no VARCHAR2(80),
    pickup_code VARCHAR2(50),
    pickup_note VARCHAR2(200),

    CONSTRAINT pk_express_pickup_details PRIMARY KEY (detail_no),
    CONSTRAINT uk_express_pickup_task UNIQUE (task_id),
    CONSTRAINT fk_express_pickup_task FOREIGN KEY (task_id)
        REFERENCES tasks(task_id)
);

/* 9. 私人物品明细表 */
CREATE TABLE private_item_details (
    detail_no NUMBER GENERATED BY DEFAULT ON NULL AS IDENTITY,
    task_id NUMBER NOT NULL,
    item_category VARCHAR2(50) NOT NULL,
    pickup_location VARCHAR2(200) NOT NULL,
    delivery_location VARCHAR2(200) NOT NULL,
    expected_finish_at DATE,
    description VARCHAR2(500),

    CONSTRAINT pk_private_item_details PRIMARY KEY (detail_no),
    CONSTRAINT uk_private_item_task UNIQUE (task_id),
    CONSTRAINT fk_private_item_task FOREIGN KEY (task_id)
        REFERENCES tasks(task_id)
);

/* 10. 接派记录表 */
CREATE TABLE assign_records (
    record_id NUMBER GENERATED BY DEFAULT ON NULL AS IDENTITY,
    task_id NUMBER NOT NULL,
    runner_id NUMBER NOT NULL,
    operation_type VARCHAR2(30) NOT NULL,
    assigned_at DATE DEFAULT SYSDATE NOT NULL,
    reassign_reason VARCHAR2(300),

    CONSTRAINT pk_assign_records PRIMARY KEY (record_id),
    CONSTRAINT fk_assign_records_task FOREIGN KEY (task_id)
        REFERENCES tasks(task_id),
    CONSTRAINT fk_assign_records_runner FOREIGN KEY (runner_id)
        REFERENCES runners(runner_id),
    CONSTRAINT ck_assign_records_operation CHECK (
        operation_type IN ('SELF_ACCEPT', 'ADMIN_ASSIGN', 'REASSIGN')
    )
);

/* 11. 任务状态日志表 */
CREATE TABLE task_status_logs (
    log_id NUMBER GENERATED BY DEFAULT ON NULL AS IDENTITY,
    task_id NUMBER NOT NULL,
    status_before VARCHAR2(30),
    status_after VARCHAR2(30) NOT NULL,
    operator VARCHAR2(50),
    operated_at DATE DEFAULT SYSDATE NOT NULL,

    CONSTRAINT pk_task_status_logs PRIMARY KEY (log_id),
    CONSTRAINT fk_task_status_logs_task FOREIGN KEY (task_id)
        REFERENCES tasks(task_id),
    CONSTRAINT ck_task_status_before CHECK (
        status_before IS NULL OR status_before IN 
        ('CREATED', 'PAID', 'ASSIGNED', 'FINISHED', 'CANCELED')
    ),
    CONSTRAINT ck_task_status_after CHECK (
        status_after IN ('CREATED', 'PAID', 'ASSIGNED', 'FINISHED', 'CANCELED')
    )
);

/* 12. 支付记录表 */
CREATE TABLE payments (
    payment_id NUMBER GENERATED BY DEFAULT ON NULL AS IDENTITY,
    record_id NUMBER NOT NULL,
    order_amount NUMBER(10,2) NOT NULL,
    pay_amount NUMBER(10,2) NOT NULL,
    pay_method VARCHAR2(30) NOT NULL,
    third_trade_no VARCHAR2(100),
    pay_status VARCHAR2(20) DEFAULT 'UNPAID' NOT NULL,

    CONSTRAINT pk_payments PRIMARY KEY (payment_id),
    CONSTRAINT fk_payments_record FOREIGN KEY (record_id)
        REFERENCES assign_records(record_id),
    CONSTRAINT ck_payments_order_amount CHECK (order_amount >= 0),
    CONSTRAINT ck_payments_pay_amount CHECK (pay_amount >= 0),
    CONSTRAINT ck_payments_method CHECK (
        pay_method IN ('WECHAT', 'ALIPAY', 'CASH')
    ),
    CONSTRAINT ck_payments_status CHECK (
        pay_status IN ('UNPAID', 'PAID', 'FAILED', 'REFUNDED')
    )
);

/* 13. 退款记录表 */
CREATE TABLE refunds (
    refund_id NUMBER GENERATED BY DEFAULT ON NULL AS IDENTITY,
    payment_id NUMBER NOT NULL,
    refund_amount NUMBER(10,2) NOT NULL,
    refund_reason VARCHAR2(300) NOT NULL,
    approved_amount NUMBER(10,2),
    process_status VARCHAR2(20) DEFAULT 'APPLY' NOT NULL,

    CONSTRAINT pk_refunds PRIMARY KEY (refund_id),
    CONSTRAINT fk_refunds_payment FOREIGN KEY (payment_id)
        REFERENCES payments(payment_id),
    CONSTRAINT ck_refunds_amount CHECK (refund_amount >= 0),
    CONSTRAINT ck_refunds_approved CHECK (
        approved_amount IS NULL OR approved_amount >= 0
    ),
    CONSTRAINT ck_refunds_status CHECK (
        process_status IN ('APPLY', 'APPROVED', 'REJECTED', 'DONE')
    )
);

/* 14. 跑腿员结算表 */
CREATE TABLE settlements (
    settlement_id NUMBER GENERATED BY DEFAULT ON NULL AS IDENTITY,
    payment_id NUMBER,
    runner_id NUMBER NOT NULL,
    order_total NUMBER(10,2) NOT NULL,
    platform_fee NUMBER(10,2) DEFAULT 0 NOT NULL,
    net_income NUMBER(10,2) NOT NULL,
    settlement_status VARCHAR2(20) DEFAULT 'WAITING' NOT NULL,

    CONSTRAINT pk_settlements PRIMARY KEY (settlement_id),
    CONSTRAINT fk_settlements_payment FOREIGN KEY (payment_id)
        REFERENCES payments(payment_id),
    CONSTRAINT fk_settlements_runner FOREIGN KEY (runner_id)
        REFERENCES runners(runner_id),
    CONSTRAINT ck_settlements_order_total CHECK (order_total >= 0),
    CONSTRAINT ck_settlements_platform_fee CHECK (platform_fee >= 0),
    CONSTRAINT ck_settlements_net_income CHECK (net_income >= 0),
    CONSTRAINT ck_settlements_status CHECK (
        settlement_status IN ('WAITING', 'DONE', 'BLOCKED')
    )
);

/* 15. 评价记录表 */
CREATE TABLE reviews (
    review_id NUMBER GENERATED BY DEFAULT ON NULL AS IDENTITY,
    runner_id NUMBER NOT NULL,
    rating NUMBER NOT NULL,
    anonymous_flag CHAR(1) DEFAULT 'N' NOT NULL,
    comment_text VARCHAR2(500),
    reviewed_at DATE DEFAULT SYSDATE NOT NULL,
    credit_delta NUMBER,

    CONSTRAINT pk_reviews PRIMARY KEY (review_id),
    CONSTRAINT fk_reviews_runner FOREIGN KEY (runner_id)
        REFERENCES runners(runner_id),
    CONSTRAINT ck_reviews_rating CHECK (rating BETWEEN 1 AND 5),
    CONSTRAINT ck_reviews_anonymous CHECK (anonymous_flag IN ('Y', 'N'))
);

/* 16. 投诉记录表 */
CREATE TABLE complaints (
    complaint_id NUMBER GENERATED BY DEFAULT ON NULL AS IDENTITY,
    runner_id NUMBER NOT NULL,
    reason VARCHAR2(300) NOT NULL,
    process_status VARCHAR2(20) DEFAULT 'SUBMITTED' NOT NULL,
    process_result VARCHAR2(500),

    CONSTRAINT pk_complaints PRIMARY KEY (complaint_id),
    CONSTRAINT fk_complaints_runner FOREIGN KEY (runner_id)
        REFERENCES runners(runner_id),
    CONSTRAINT ck_complaints_status CHECK (
        process_status IN ('SUBMITTED', 'PROCESSING', 'DONE')
    )
);

/* 17. 审计日志表 */
/* 注意：因为 reports 表引用 audit_logs，所以 audit_logs 要先创建 */
CREATE TABLE audit_logs (
    audit_id NUMBER GENERATED BY DEFAULT ON NULL AS IDENTITY,
    audit_object VARCHAR2(100) NOT NULL,
    audit_result VARCHAR2(50) NOT NULL,
    audited_at DATE DEFAULT SYSDATE NOT NULL,
    exception_note VARCHAR2(500),

    CONSTRAINT pk_audit_logs PRIMARY KEY (audit_id),
    CONSTRAINT ck_audit_logs_result CHECK (
        audit_result IN ('PASS', 'EXCEPTION')
    )
);

/* 18. 统计报表表 */
CREATE TABLE reports (
    report_id NUMBER GENERATED BY DEFAULT ON NULL AS IDENTITY,
    audit_id NUMBER,
    report_type VARCHAR2(50) NOT NULL,
    stat_period VARCHAR2(50) NOT NULL,
    generated_at DATE DEFAULT SYSDATE NOT NULL,
    report_status VARCHAR2(20) DEFAULT 'GENERATED' NOT NULL,

    CONSTRAINT pk_reports PRIMARY KEY (report_id),
    CONSTRAINT fk_reports_audit FOREIGN KEY (audit_id)
        REFERENCES audit_logs(audit_id),
    CONSTRAINT ck_reports_status CHECK (
        report_status IN ('GENERATED', 'ARCHIVED')
    )
);